[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syncrowrapper"
version = "0.0.01"
authors = [{ name = "Clayton Main", email = "main.clayton@gmail.com" }]
description = "Syncro API Wrapper (sample)."
readme = "README.md"
requires-python = ">=3.11.3"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
]
dependencies = ["requests", "python-dateutil", "typing-extensions"]

[project.urls]
Homepage = "https://github.com/ClaytonMain/syncro-api-wrapper-sample"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["syncrowrapper*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    # "--ignore=tests/test_contact_methods.py",
    # "--ignore=tests/test_customer_methods.py",
    # "--ignore=tests/test_rmm_alerts_methods.py",
    # "--ignore=tests/test_ticket_methods.py",
    # "--ignore=tests/test_ticket_timer_methods.py",
    # "--ignore=tests/test_type_definitions.py",
    # "--ignore=tests/test_user_methods.py",
]
